// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsLink renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#C8C7CC",
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 15,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
          },
        ]
      }
    >
      72b47a5f-db79-4431-a2ca-612d97f547cc
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#8F8E94",
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
              "position": "absolute",
              "right": 15,
              "textAlign": "right",
              "width": 250,
            },
            Object {
              "right": 35,
            },
          ],
        ]
      }
    >
      e87b6472-bbd7-4a6d-833a-0c5030189213
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Object {
            "color": "#C7C7CC",
            "fontSize": 20,
            "paddingTop": 2,
            "position": "absolute",
            "right": 15,
          },
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`SettingsLink renders correctly as the last item 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#C8C7CC",
          "borderBottomWidth": 0.5,
          "flex": 1,
          "height": 44,
          "justifyContent": "center",
          "marginLeft": 15,
          "paddingRight": 15,
        },
        Object {
          "borderBottomWidth": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
          },
        ]
      }
    >
      d8d6a18e-0553-44fa-9f68-158b7364bc5e
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#8F8E94",
              "fontSize": 17,
              "fontWeight": "400",
              "lineHeight": 22,
              "position": "absolute",
              "right": 15,
              "textAlign": "right",
              "width": 250,
            },
            Object {
              "right": 35,
            },
          ],
        ]
      }
    >
      b40740ec-ccb1-41c6-8fa5-72147f467556
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Object {
            "color": "#C7C7CC",
            "fontSize": 20,
            "paddingTop": 2,
            "position": "absolute",
            "right": 15,
          },
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
